# arch-fastapi

./: .gitignore  pyproject.toml
app/core/: config.py
app/models/: __init__.py
arch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
